fix: align navbar styling

--- a/theme-dark.css
+++ b/theme-dark.css
@@ -4,6 +4,7 @@ $link-color: #f0f600;
 $body-bg: #181818;
 
 $navbar-bg: #4c1a57;
+$navbar-padding-y: 0.5rem !default;
 
 /*-- Code blocks --*/
 $code-block-bg-alpha: -.8;
